--- a/.github/ISSUE_TEMPLATE/issue-template.yml
+++ b/.github/ISSUE_TEMPLATE/issue-template.yml
@@ -24,12 +24,15 @@ body:
     validations:
       required: false
   - type: checkboxes
-    id: type
+    id: codesys
     attributes:
       label: Coding system
       description: Please select the coding system required (See this blog for further info on coding systems if needed - https://www.bennett.ox.ac.uk/blog/2023/06/an-introduction-to-clinical-codes-and-terminology-systems/.
       options:
         - label: SNOMED CT
+        - label: dm+d
+        - label: ICD-10
+        - label: Other (please detail in User Requirements)
           required: false
   - type: checkboxes
     id: type
