--- a/.github/ISSUE_TEMPLATE/issue-template.yml
+++ b/.github/ISSUE_TEMPLATE/issue-template.yml
@@ -2,10 +2,13 @@ name: Clinical codelist request
 description: Use to record condition/procedure/test codelists
 title: '[Delete as appropriate] *CONDITION*/*PROCEDURE*/*TEST*: [TITLE]'
 body: 
+  - type: markdown
+    attributes:
+      value: "This template is designed to create a full template for codelist construction metadata.  have been completed and a response has been sent to the requester, please close the issue.**"
   - type: textarea
     attributes:
       label: User Requirements
-      description: Give an idea of what the purpose of the codelist is. Is there a particular study it is to be used in? What are you hoping to identify using the codelist? Will it be used along or in combination with other codelists? Generally the more information the better.
+      description: REQUIRED - Give an idea of what the purpose of the codelist is. Is there a particular study it is to be used in? What are you hoping to identify using the codelist? Will it be used along or in combination with other codelists? Generally the more information the better.
       placeholder: 
     validations:
       required: true
@@ -13,16 +16,17 @@ body:
     id: codesys
     attributes:
       label: Coding system
-      description: Please select the coding system required (See this blog for further info on coding systems if needed - https://www.bennett.ox.ac.uk/blog/2023/06/an-introduction-to-clinical-codes-and-terminology-systems/.
+      description: REQUIRED - Please select the coding system required (See this blog for further info on coding systems if needed - https://www.bennett.ox.ac.uk/blog/2023/06/an-introduction-to-clinical-codes-and-terminology-systems/.
       options:
         - label: SNOMED CT
         - label: dm+d
         - label: ICD-10
         - label: Other (please detail in User Requirements)
-          required: false
+        - label: I'm not sure (please detail intended use in User Requirements)
+          required: true
   - type: textarea
     attributes:
-      label: Sensitivity versus specificity
+      label: REQUIRED - Sensitivity versus specificity
       description: If possible, give an idea of what the balance should be (e.g. I only want to identify confirmed cases of COVID-19 versus I want to identify anyone with even a potential COVID-19 symptom).
       placeholder: Leave blank if unsure
     validations:
@@ -34,14 +38,9 @@ body:
       placeholder: Leave blank if unsure
     validations:
       required: false
-  - type: checkboxes
-    id: type
+  - type: markdown
     attributes:
-      label: Coding system
-      description: Please add a label indicating the type of codelist that is required.
-      options:
-        - label: I have added a label
-          required: true
+      value: "*The sections below will usually be filled in during construction process rather than at initial request, leave blank if you are unsure*"
   - type: textarea
     attributes:
       label: Search terms / synonyms
