--- a/.github/ISSUE_TEMPLATE/issue-template.yml
+++ b/.github/ISSUE_TEMPLATE/issue-template.yml
@@ -4,7 +4,7 @@ title: '[Delete as appropriate] *CONDITION*/*PROCEDURE*/*TEST*: [TITLE]'
 body: 
   - type: markdown
     attributes:
-      value: "This template is designed to create a full template for codelist construction metadata. You do not need to complete all sections as some will be completed during codelist construction. Sections marked with a * are required."
+      value: "This template is designed to create a full template for codelist construction metadata. Sections marked with a * are required. You do not need to complete all sections when requesting as some will be completed during codelist construction."
   - type: textarea
     attributes:
       label: User Requirements*
@@ -15,8 +15,8 @@ body:
   - type: checkboxes
     id: codesys
     attributes:
-      label: Coding system
-      description: REQUIRED - Please select the coding system required (See this blog for further info on coding systems if needed - https://www.bennett.ox.ac.uk/blog/2023/06/an-introduction-to-clinical-codes-and-terminology-systems/.
+      label: Coding system*
+      description: Please select the coding system required (See this blog for further info on coding systems if needed - https://www.bennett.ox.ac.uk/blog/2023/06/an-introduction-to-clinical-codes-and-terminology-systems/.
       options:
         - label: SNOMED CT
         - label: dm+d
