--- a/.github/ISSUE_TEMPLATE/medication-issue-template.yml
+++ b/.github/ISSUE_TEMPLATE/medication-issue-template.yml
@@ -73,7 +73,7 @@ body:
       required: false
   - type: textarea
     attributes:
-      label: Edge cases
+      label: Borderline cases
       placeholder: Leave blank if unsure
     validations:
       required: false  
